计算器练手

--- a/Calculator/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Calculator/Base.lproj/Main.storyboard
@@ -24,12 +24,12 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ITv-c9-yMA">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="240"/>
                                         <subviews>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" text="1" borderStyle="bezel" textAlignment="natural" minimumFontSize="23" translatesAutoresizingMaskIntoConstraints="NO" id="OPV-S1-LNv">
+                                            <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="right" contentVerticalAlignment="bottom" text="0" borderStyle="line" textAlignment="right" minimumFontSize="23" translatesAutoresizingMaskIntoConstraints="NO" id="OPV-S1-LNv">
                                                 <rect key="frame" x="0.0" y="0.0" width="600" height="240"/>
                                                 <animations/>
                                                 <color key="backgroundColor" white="0.56163793103448278" alpha="1" colorSpace="calibratedWhite"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                         </subviews>
@@ -45,21 +45,33 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="C"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UPH-oO-DW7"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qNU-Gy-4hZ" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="150" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="+/-"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aju-iz-MYd"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QcP-VZ-BkL" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="300" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="%"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kil-yG-LO8"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lq4-bA-A2v" customClass="CalBtnOrange" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="450" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="÷"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jya-ng-J6Y"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <animations/>
@@ -77,21 +89,33 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="7"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i1O-oJ-FVA"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ppf-n5-PL4" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="150" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="8"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cou-VK-Vhq"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wkd-JH-LiL" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="300" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="9"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gqO-Of-NHM"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="obU-WG-N5f" customClass="CalBtnOrange" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="450" y="0.0" width="150" height="120"/>
                                                 <animations/>
-                                                <state key="normal" title="x"/>
+                                                <state key="normal" title="×"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ysg-3h-K1T"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <animations/>
@@ -109,21 +133,33 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="4"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rtS-qF-H6Z"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4L-Fi-RkA" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="150" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="5"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VCt-Oq-OOG"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZr-AW-M3a" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="300" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="6"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mOO-Cm-f9n"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i9A-WZ-vqx" customClass="CalBtnOrange" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="450" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="-"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IQH-40-1R8"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <animations/>
@@ -141,21 +177,33 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="1"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SX9-Nz-ocF"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XNo-fR-7Ky" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="150" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="2"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jw0-Cn-SZx"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVG-Gq-mMa" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="300" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="3"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="E8o-Ro-vP7"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sf5-Xs-OY0" customClass="CalBtnOrange" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="450" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="+"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zNH-MM-ObP"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <animations/>
@@ -173,16 +221,25 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="0"/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchDown" id="rt6-R7-s3t"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JbN-9l-wYb" customClass="CalBtn" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="300" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="."/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gB3-i1-dKk"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u2A-vj-Dtt" customClass="CalBtnOrange" customModule="Calculator" customModuleProvider="target">
                                                 <rect key="frame" x="450" y="0.0" width="150" height="120"/>
                                                 <animations/>
                                                 <state key="normal" title="="/>
+                                                <connections>
+                                                    <action selector="onBtnTouchDown:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HIA-N7-fqv"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <animations/>
@@ -218,6 +275,9 @@
                             <constraint firstAttribute="bottom" secondItem="Hf7-v3-Eq2" secondAttribute="bottom" id="zV4-bS-e68"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="resultField" destination="OPV-S1-LNv" id="tbM-wR-M8u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
